# RobotRace

./: .gitignore  CMakeLists.txt  LICENSE  README.md  genetic_evolution.cpp  genetic_parameters.conf  motor_schema.argos  multibot_test.argos  multibot_train.argos  multiple_bot_experiment.cpp  race.argos  race.cpp  single_bot_experiment.cpp  test.argos  test_controller.cpp  train.argos  vector.lua
controllers/: CMakeLists.txt  common_controller.cpp  common_controller.h
controllers/advanced_controller/: advanced_controller.cpp  advanced_controller.h
controllers/dumb_controller/: dumb_controller.lua
controllers/genetic_controller/: genetic_controller.cpp  genetic_controller.h
controllers/motor_schema_controller/: motor_schema.cpp  motor_schema.h  motor_schema.lua
controllers/simple_controller/: simple_controller.cpp  simple_controller.h
doc/: bibliografia.bib  report.aux  report.tex
loop_function/: CMakeLists.txt  multi_robot_loop_function.cpp  multi_robot_loop_function.h  race_loop_function.cpp  race_loop_function.h  single_robot_loop_function.cpp  single_robot_loop_function.h
loop_function/utils/: utils.cpp  utils.h
simple_ga/two_point/: parameters.conf
steady_state/one_point/: parameters.conf
steady_state/one_point_f/: parameters.conf
steady_state/one_point_pC0.8_pM0.01/: parameters.conf
steady_state/one_point_pC0.9_pM0.01/: parameters.conf
steady_state/one_point_pC0.9_pM0.05/: parameters.conf
steady_state/one_point_pC0.9_pM0.15/: parameters.conf
steady_state/one_point_steps/: parameters.conf
steady_state/two_point/: parameters.conf
steady_state/uniform/: parameters.conf
